--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "personal-site",
   "version": "3.0.1",
-  "homepage": "https://osterby.github.io/personal-site",
+  "homepage": "https://osterby.github.io/",
   "license": "MIT",
   "repository": {
     "type": "git",
